discussion/kv_engine/176433/176433_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-16 16:40:06.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-16 17:03:27.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19518/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18: error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
        collector.addStat(std::string_view(key.data(), key.size()), statValue);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:19:7: note: forward declaration of "StatCollector"
class StatCollector;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19518/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19518/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48420/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
(100 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48420/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40683/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40683/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9308/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T16:53:38.157Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T16:53:38.157Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T16:53:38.157Z] (17 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9308/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21458/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T16:53:38.474Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T16:53:38.474Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T16:53:38.474Z] (56 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21458/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20716/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T16:54:23.857Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T16:54:23.857Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T16:54:23.857Z] (39 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20716/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21811/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T16:46:10.668Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T16:46:10.668Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T16:46:10.668Z] (19 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21811/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22533/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T16:54:14.330Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T16:54:14.330Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T16:54:14.330Z] (467 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22533/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29836/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T16:59:57.017Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T16:59:57.017Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T16:59:57.017Z] (136 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29836/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18729/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9211/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
